--- a/Web/package.json
+++ b/Web/package.json
@@ -6,7 +6,9 @@
   "author": "reccoffee_team",
   "license": "ISC",
   "scripts": {
-    "server": "http-server ."
+    "server": "http-server .",
+    "build": "webpack --config webpack.prod.js",
+    "start-dev": "webpack serve --config webpack.dev.js"
   },
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
@@ -14,6 +16,18 @@
     "glide": "^0.2.0"
   },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.2",
+    "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
